--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,8 @@ VITE_FIREBASE_PROJECT_ID=
 VITE_FIREBASE_STORAGE_BUCKET=
 VITE_FIREBASE_MESSAGING_SENDER_ID=
 VITE_FIREBASE_APP_ID=
+VITE_FIREBASE_VAPID_KEY=
+
+# Server-only key used to send FCM messages (DO NOT expose to client)
+FCM_SERVER_KEY=
 BLOB_READ_WRITE_TOKEN=
