--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,13 @@ VITE_FIREBASE_VAPID_KEY=
 # Server-only key used to send FCM messages (DO NOT expose to client)
 FCM_SERVER_KEY=
 BLOB_READ_WRITE_TOKEN=
+
+# Email Configuration (Nodemailer)
+# For Gmail: Use smtp.gmail.com, port 587, and an App Password
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
+EMAIL_FROM_NAME="JDM Auto Imports"
+ADMIN_EMAIL=admin@jdmautoimports.com.au
