--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,4 @@ EMAIL_SECURE=false
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
 EMAIL_FROM_NAME="JDM Auto Imports"
-ADMIN_EMAIL=admin@jdmautoimports.com.au
+ADMIN_EMAIL=@gmail.com@jdmautoimports.com.au
